--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,10 +13,11 @@
             background-position: center;
             background-repeat: no-repeat;
             font-family: Arial, sans-serif;
+            min-height: 50vh;
         }
 
         .navbar {
-            width: 100%;
+            width: 97%;
             background-color: rgba(0, 0, 0, 0.8);
             padding: 15px 20px;
             color: white;
@@ -35,7 +36,7 @@
 
         .navbar a {
             color: white;
-            margin-left: 20px;
+            margin-left: 50px;
             text-decoration: none;
             font-weight: bold;
         }
@@ -90,16 +91,26 @@
     <div class="navbar">
         <h2>BAMAV2</h2>
         <div>
-            <a href="#">Inicio</a>
-            <a href="/mantenimiento">Entrar</a>
-            <a href="#">Usuarios</a>
-            <a href="#">Salir</a>
+            <a href="#">Telematica</a>
+            <a href="{{ url_for('main.logout') }}">Salir</a>
+        <div style="position: absolute; top: 20px; right: 20px;">
+    <a href="{{ url_for('main.logout') }}" style="background-color: rgb(141, 92, 102); color: white; padding: 10px 20px; border-radius: 5px; font-weight: bold; text-decoration: none;">
+        Salir
+    </a>
+</div>
+
+
         </div>
     </div>
 
     <div class="content">
         <h1>Bienvenido al Panel Principal</h1>
-        <p>Aquí aparecerán los módulos y opciones del sistema.</p>
+        
+{% if usuario %}
+    <p style="font-weight: bold; font-size: 18px;">Usuario: {{ usuario }}</p>
+{% endif %}
+
+        <p>módulos y opciones del sistema.</p>
 
         <div class="cards-container">
             <div class="card">
