--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="fondo-oscuro">
+        <img src="{{ url_for('static', filename='animacion.gif') }}" class="gif-flotante" alt="GIF Hangar">
         <h1>Sistema de Mantenimiento Computo BAMAV2</h1>
         <p>Seleccione una opción para continuar:</p>
 
