--- a/templates/alertas.html
+++ b/templates/alertas.html
@@ -11,6 +11,9 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 40px;
+            text-align: center;
+            
+            
         }
 
         h1 {
@@ -20,6 +23,7 @@
 
         .botones {
             margin-top: 20px;
+            
         }
 
         .boton-accion {
@@ -36,6 +40,7 @@
             cursor: pointer;
             transition: background-color 0.3s;
             text-align: center;
+            
         }
 
         .boton-accion:hover {
