--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
         <form action="/forgot-password" method="get">
             <button type="submit">¿Olvidaste tu contraseña?</button>
         </form>
+
+        <img src="{{ url_for('static', filename='logo_personal.png') }}" class="marca-agua" alt="Marca de agua">
+
     </div>
 </body>
 </html>
