--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
             flex-direction: column;
             align-items: center;
             padding: 75px;
+            min-height: 100vh;
         }
 
         form {
