--- a/templates/mantenimientos_mensuales.html
+++ b/templates/mantenimientos_mensuales.html
@@ -13,20 +13,28 @@
         color: white;
         margin: 0;
         padding: 190px;
+        height: 100%; 
+        margin-top: 10;
+        
     }
 
 
         .contenedor-meses {
+        
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 80px;
             justify-content: center;
+            height: 300%; 
+           
+            
+            
         }
 
         .mes-card {
             background-color: rgba(0, 0, 0, 0.75);
             border-radius: 10px;
-            padding: 20px;
+            padding: 40px;
             width: 300px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
         }
@@ -53,6 +61,7 @@
     </style>
 </head>
 <body>
+    
     <h1 style="text-align:center;">Seguimiento plan de Mantenimiento</h1>
     <div class="contenedor-meses">
         {% for mes, registros in registros_por_mes.items() %}
