--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@
             flex-direction: column;
             align-items: center;
             padding: 50px;
+            min-height: 100vh;
         }
 
         h2 {
@@ -79,8 +80,7 @@
 
     <form method="POST" action="/register">
         <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" name="usuario" required>
-
+        <input type="text" id="usuario" name="usuario" autocomplete="off">
         <label for="email">Correo:</label>
         <input type="email" id="email" name="email" required>
 
