--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,18 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+
+     <div class="espectron-titulo">
+  Espectron versión 1.0
+</div>
+
     <div class="fondo-oscuro">
         <img src="{{ url_for('static', filename='animacion.gif') }}" class="gif-flotante" alt="GIF Hangar">
         <h1>Sistema de Mantenimiento Computo BAMAV2</h1>
         <p>Seleccione una opción para continuar:</p>
 
+    
+   
         <form action="/login" method="get">
             <button type="submit">Iniciar sesión</button>
         </form>
