cambio tilde espectròn

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 
      <div class="espectron-titulo">
-  Espectron versión 1.0
+  Espectròn versión 1.0
 </div>
 
     <div class="fondo-oscuro">
